Fixed "hey there" div not wrapping properly

--- a/style_flex.css
+++ b/style_flex.css
@@ -67,3 +67,4 @@
 }
 
 .wrap {flex-wrap: wrap;}
+.wrap_reverse {flex-wrap: wrap-reverse;}
